# minerva

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  install_claude.py  main.py  pyproject.toml  server.py  temp_test.md  test_helpers_demo.py
.claude/commands/: check-documentation.md  create-issue.md  create-pr.md  sync-labels.md  update-knowledge.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  feature_request.md
.github/copilot/: python.md
.github/copilot/patterns/: error_handling.md  file_operations.md  frontmatter.md
.github/instructions/: ai_guidelines.md  commit.md  document_first_checklist.md  github_labels.md  language_rules.md  python.md  reference.md
.github/instructions/patterns/: dependency_injection.md  document_first.md  error_handling.md  file_operations.md  frontmatter.md  logging.md  testing.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml
docs/: claude_code_commands.md  copilot_guidelines.md  development_setup.md  development_workflow.md  error_handling.md  github_workflow.md  issue_pr_guide.md  label_management.md  note_operations.md  optional_dependencies.md  pre-commit-guide.md  property_based_testing.md  release_process.md  requirements.md  technical_spec.md  test_guidelines.md  vector_search_api.md  vector_search_troubleshooting.md
minerva/: config.py  file_handler.py  tools.py
scripts/: check_trailing_whitespace.py  check_version.py
src/minerva/: __init__.py  __main__.py  __version__.py  config.py  error_handler.py  exceptions.py  file_handler.py  frontmatter.py  frontmatter_manager.py  models.py  server.py  service.py  tools.py  validators.py
src/minerva/services/: __init__.py  alias_operations.py  frontmatter_operations.py  merge_processors.py  note_operations.py  search_operations.py  service_manager.py  tag_operations.py
src/minerva/services/core/: __init__.py  base_service.py  file_operations.py  path_resolver.py
src/minerva/vector/: __init__.py  batch_indexer.py  embeddings.py  indexer.py  searcher.py
tests/: conftest.py  helpers.py  test_alias_functionality.py  test_config.py  test_error_handler.py  test_exceptions.py  test_file_handler.py  test_frontmatter.py  test_frontmatter_properties.py  test_helpers_example.py  test_search_properties.py  test_server.py  test_server_integration.py  test_service.py  test_service_error_handling.py  test_service_integration.py  test_tools.py  test_validators.py  test_validators_properties.py
tests/services/: test_alias_operations.py  test_auto_index.py  test_frontmatter_operations.py  test_merge_operations.py  test_note_operations.py  test_search_operations.py  test_service_manager.py  test_tag_operations.py
tests/services/core/: __init__.py  test_base_service.py  test_file_operations.py  test_path_resolver.py  test_path_resolver_properties.py
tests/tools/: test_create_note.py  test_delete_note.py  test_edit_note.py  test_integration.py  test_private_functions.py  test_read_note.py  test_search_note.py  test_tag_operations.py  test_tools_integration.py  test_tools_unit.py  test_write_note.py
tests/vector/: __init__.py  test_batch_indexer.py  test_embeddings.py  test_incremental_indexing.py  test_indexer.py  test_searcher.py
