[project]
name = "minerva"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "python-frontmatter>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "python-semantic-release>=9.21.1",
]

[tool.mypy]
python_version = "3.12"
# 型チェックポリシーの設定
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

# テストファイルのGetTagsRequestなどのエラーを抑制
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
# call-argエラーを抑制
disable_error_code = ["call-arg"]

[project.scripts]
minerva = "minerva.__main__:main"

[[tool.mypy.overrides]]
module = ["frontmatter"]
ignore_missing_imports = true

[tool.semantic_release]
version_variable = ["src/minerva/__version__.py:__version__", "pyproject.toml:version"]
branch = "main"
commit_message = "chore(release): {version} [skip ci]"
build_command = "uv build"
