[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minerva"
version = "0.22.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.3",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
vector = [
    "duckdb>=1.1.3",
    "sentence-transformers>=3.3.1",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "hatchling",
    "hypothesis>=6.100.0",
    "mypy>=1.15.0",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "python-semantic-release>=9.21.1",
    "ruff>=0.8.0",
    "time-machine>=2.15.0",
]

[tool.mypy]
python_version = "3.12"
# type checking policy
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

# Suppress errors such as GetTagsRequest in test files
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = "frontmatter"
ignore_missing_imports = true

# Optional vector dependencies - only available when [vector] extra is installed
[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "sentence_transformers.*",
    "duckdb.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.ruff]
# Same as Black.
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Start with basic rules to avoid overwhelming errors
select = ["E", "W", "F", "C901"]
ignore = [
    "E501",   # line too long (handled by formatter)
]
mccabe = { max-complexity = 10 }  # Ruff's default level is 10

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: fast unit tests",
    "integration: integration tests",
    "vector: tests that require vector search dependencies (numpy, duckdb, sentence-transformers)",
]

[project.scripts]
minerva = "minerva.__main__:main"

[tool.uv]
package = true

[tool.semantic_release]
version_variables = ["src/minerva/__version__.py:__version__", "pyproject.toml:version"]
branch = "main"
commit_message = "chore(release): {version} [skip ci]"
build_command = "uv build"
changelog_file = "CHANGELOG.md"
upload_to_vcs_release = true

[tool.semantic_release.remote]
type = "github"
